update for the header and footer

--- a/frontend/CSS/_variables.css
+++ b/frontend/CSS/_variables.css
@@ -8,4 +8,5 @@
     --text-color: white;
     --link-color: rgb(79, 79, 221);
     --shadow-color: rgba(0, 0, 0, 0.3);
+    --header-bg-color: var(--bg-color); 
 }
