--- a/frontend/CSS/index.css
+++ b/frontend/CSS/index.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font-primary);
     background-color: var(--bg-color);
     color: var(--text-color);
     min-height: 100vh;
@@ -257,5 +257,5 @@ main {
 
 
 @media (min-width: 900px){
-    
+
 }
