--- a/frontend/CSS/forms-style.css
+++ b/frontend/CSS/forms-style.css
@@ -1,4 +1,5 @@
 @import url('_variables.css');
+@import url(header.css);
 
 * {
     margin: 0;
@@ -10,14 +11,17 @@ body {
     text-align: center;
     font-family: Calibri;
 }
-
 .sign-up , .sign-in {
     display: flex;
     align-items: center; 
     justify-content: center;
     gap: 20px;
 }
-
+.logo{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
 .sign-up form , .sign-in form {
     box-sizing: border-box;
     width: 35%;
@@ -91,13 +95,17 @@ input::placeholder {
     width: 14px;
     height: 14px;
 }
-.sign-up button , .sign-in button {
+.sign-up button ,
+.sign-in button ,
+.cancel-button {
     all: unset;
     padding-inline: 20px;
     padding-block: 10px;
-    margin-block: 20px;
+    margin-block: 10px;
     border-radius: 20px; 
     background-color: var(--primary-color);
+    color: white !important;
+    cursor: pointer;
 }
 
 .sign-up button:active , .sign-in button:active  {
@@ -109,7 +117,7 @@ input::placeholder {
     background-color: var(--primary-hover);
 }
 
-.sign-in a , .sign-in a {
+.sign-in a , .sign-up a {
     text-decoration: none;
     color: var(--link-color);
 }
@@ -130,3 +138,4 @@ input::placeholder {
         display: none;
     }
 }
+
