--- a/frontend/CSS/_variables.css
+++ b/frontend/CSS/_variables.css
@@ -14,4 +14,12 @@
 
 
     --font-primary: 'Poppins', sans-serif;
+
+
+
+    --lvl1-borrow: #A7D0E1; /*1-5*/
+    --lvl2-borrow: #5AA9E6; /*6-15*/
+    --lvl3-borrow: #3A86FF; /*16-30*/
+    --lvl4-borrow: #2667FF; /*31-50*/
+    --lvl5-borrow: #0038A8; /*+50*/
 }
