--- a/frontend/CSS/admin_dashboard.css
+++ b/frontend/CSS/admin_dashboard.css
@@ -9,6 +9,14 @@
     font-family: var(--font-primary);
 }
 
+body {
+    background-color: var(--bg-color);
+}
+
+.hide {
+    display: none;
+}
+
 .header-content {
     margin-bottom: 20px;
     font-family: 'Poppins';
@@ -75,6 +83,7 @@
     width: 12vw;
     height: 40px;
     border-radius: 5px;
+    border: none;
 }
 
 .search-input {
@@ -89,6 +98,15 @@
     border: none;
 }
 
+.search-btn {
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+    border-radius: 30px;
+    border: none;
+    width: 50px;
+    height: 45px;
+}
+
 .dashboard-container a {
     display: flex;
     justify-content: center;
@@ -99,12 +117,22 @@
 }
 
 #add-book {
-    background-color: var(--bg-color);
-    color: var(--primary-color);
-    border-radius: 10px;
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    font-size: 18px;
+    border-radius: 50px;
     border: 1px bold var(--primary-color);
-    width: 100px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    right: 50px;
+    bottom: 50px;
+    z-index: 100;
+}
+
+#add-book:hover {
+    background-color: var(--form-bg-color);
+    color: var(--primary-color);
 }
 
 .books-container {
@@ -172,6 +200,7 @@
     font-weight: none;
     padding-left: 10px;
     padding-bottom: 5px;
+    opacity: 0.8;
 }
 
 .book-information,
@@ -193,6 +222,7 @@
     border: none;
     padding: 7px 5px;
     border-radius: 6px;
+    opacity: 0.8;
 }
 
 .book-information label {
@@ -250,6 +280,7 @@ button,
 a {
     cursor: pointer;
     transition: all 0.3s ease;
+    outline: none;
 }
 
 .edit {
@@ -284,20 +315,10 @@ a {
     width: fit-content;
 }
 
-.search-btn {
-    background-color: var(--bg-color);
-    color: var(--primary-color);
-    border-radius: 30px;
-    border: none;
-    width: 50px;
-    height: 45px;
-}
-
 .book:hover {
     transform: translateY(-2px);
 }
 
-#add-book:hover,
 .search-btn:hover,
 .borrowers-list:hover,
 .books-pages button:hover {
