--- a/frontend/CSS/admin_dashboard.css
+++ b/frontend/CSS/admin_dashboard.css
@@ -141,7 +141,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 300px;
     height: 60px;
     left: 40%;
     top: 15%;
@@ -177,10 +177,6 @@ body {
     100% {
         translate: 0px -300px;
     }
-}
-
-.hide {
-    display: none;
 }
 
 .header-content {
@@ -562,4 +558,8 @@ a {
     body {
         width: 300px;
     }
+}
+
+.hide {
+    display: none;
 }
