--- a/frontend/CSS/borrowed.css
+++ b/frontend/CSS/borrowed.css
@@ -158,6 +158,7 @@
 
 .borrowed-details,
 .favorite-details {
+    position: relative;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
