--- a/frontend/CSS/admin_dashboard.css
+++ b/frontend/CSS/admin_dashboard.css
@@ -375,11 +375,11 @@ body {
     overflow: hidden;
 }
 
-.img-holder i {
+/* .img-holder i {
     transform: scale(5);
     color: var(--form-bg-color);
     transition: all 0.3s ease;
-}
+} */
 
 .img-holder img{
     width: 100%;
@@ -387,7 +387,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.book-cover:hover {
+.book:hover  .img-holder img {
     transform: scale(1.05);
 }
 
@@ -518,7 +518,7 @@ a {
 }
 
 .book:hover {
-    transform: translateY(-2px);
+    transform: translateY(-5px);
 }
 
 .search-btn:hover,
